force-app/main/default/objects/ServiceItem__c/ServiceItem__c.object-meta.xml
<CustomObject>
    <label>Service Item</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Service Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>