force-app/main/default/objects/ServiceItem__c/fields/IsTripStartingStatus__c.field-meta.xml
<CustomField>
    <fullName>IsTripStartingStatus__c</fullName>
    <formula>OR(TEXT(Status__c) == &apos;Completed&apos;, 
    TEXT(Status__c) == &apos;Not Loaded&apos;, 
    TEXT(Status__c) == &apos;Loaded&apos;,
    TEXT(Status__c) == &apos;Item Rejected&apos;)</formula>
    <label>Is Trip Starting Status</label>
    <type>Checkbox</type>
</CustomField>