force-app/main/default/objects/ServiceItem__c/fields/ItemCost__c.field-meta.xml
<CustomField>
    <fullName>ItemCost__c</fullName>
    <label>Item Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>