force-app/main/default/objects/ServiceItem__c/fields/ItemNotes__c.field-meta.xml
<CustomField>
    <fullName>ItemNotes__c</fullName>
    <label>Item Notes</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>