force-app/main/default/objects/ServiceItem__c/fields/ItemPhotoBaseURL__c.field-meta.xml
<CustomField>
    <fullName>ItemPhotoBaseURL__c</fullName>
    <formula>LEFT(
  $Api.Enterprise_Server_URL_590, 
  FIND(&apos;/services&apos;, $Api.Enterprise_Server_URL_590)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Photo Base URL</label>
    <type>Text</type>
</CustomField>