force-app/main/default/objects/ServiceItem__c/fields/ItemPhotoURL__c.field-meta.xml
<CustomField>
    <fullName>ItemPhotoURL__c</fullName>
    <label>Item Photo URL</label>
    <type>Url</type>
</CustomField>