force-app/main/default/objects/ServiceItem__c/fields/Opportunity_Line_Item_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Line_Item_ID__c</fullName>
    <externalId>true</externalId>
    <label>Opportunity Line Item ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>