force-app/main/default/objects/ServiceItem__c/fields/Override_Product_Fee__c.field-meta.xml
<CustomField>
    <fullName>Override_Product_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Product Fee</label>
    <type>Checkbox</type>
</CustomField>