force-app/main/default/objects/ServiceItem__c/fields/ProductClass__c.field-meta.xml
<CustomField>
    <fullName>ProductClass__c</fullName>
    <label>Product Class (DELETE)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>