force-app/main/default/objects/ServiceItem__c/fields/QuantityDelivered__c.field-meta.xml
<CustomField>
    <fullName>QuantityDelivered__c</fullName>
    <label>Quantity Delivered (DELETE)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>