force-app/main/default/objects/ServiceItem__c/fields/ServiceStatus__c.field-meta.xml
<CustomField>
    <fullName>ServiceStatus__c</fullName>
    <formula>TEXT(Service__r.Status__c)</formula>
    <label>Service Status</label>
    <type>Text</type>
</CustomField>