force-app/main/default/objects/ServiceItem__c/fields/ServiceType__c.field-meta.xml
<CustomField>
    <fullName>ServiceType__c</fullName>
    <formula>Service__r.RecordType.DeveloperName</formula>
    <label>Service Type</label>
    <type>Text</type>
</CustomField>