force-app/main/default/objects/ServiceItem__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
                <default>true</default>
                <label>Requested</label>
            </value>
            <value>
                <fullName>Not Available</fullName>
            </value>
            <value>
                <fullName>Staged</fullName>
            </value>
            <value>
                <fullName>Not Loaded</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Loaded</fullName>
            </value>
            <value>
                <fullName>Shopping Declined</fullName>
            </value>
            <value>
                <fullName>Not Delivered</fullName>
            </value>
            <value>
                <fullName>Item Rejected</fullName>
            </value>
            <value>
                <fullName>Backlog</fullName>
                <isActive>false</isActive>
                <label>Backlog</label>
            </value>
            <value>
                <fullName>Declined</fullName>
                <isActive>false</isActive>
                <label>Declined</label>
            </value>
            <value>
                <fullName>Delivered</fullName>
                <isActive>false</isActive>
                <label>Delivered</label>
            </value>
            <value>
                <fullName>Received</fullName>
                <isActive>false</isActive>
                <label>Received</label>
            </value>
            <value>
                <fullName>Referred</fullName>
                <isActive>false</isActive>
                <label>Referred</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>