force-app/main/default/objects/ServiceItem__c/fields/TaxableItem__c.field-meta.xml
<CustomField>
    <fullName>TaxableItem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Taxable Item</label>
    <type>Checkbox</type>
</CustomField>