force-app/main/default/objects/ServiceItem__c/fields/Total_Estimated_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Estimated_Value__c</fullName>
    <formula>Quantity__c * Estimated_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Estimated Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>