force-app/main/default/objects/ServiceItem__c/fields/TotalItemPrice__c.field-meta.xml
<CustomField>
    <fullName>TotalItemPrice__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Item Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>