force-app/main/default/objects/ServiceItem__c/fields/Web_Portal_ID__c.field-meta.xml
<CustomField>
    <fullName>Web_Portal_ID__c</fullName>
    <label>Web Portal ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>