force-app/main/default/objects/ServiceItem__c/fields/Web_Portal_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Web_Portal_Product_Code__c</fullName>
    <label>Web Portal Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>