force-app/main/default/objects/ServiceItem__c/recordTypes/ClientRequestItem.recordType-meta.xml
<RecordType>
    <fullName>ClientRequestItem</fullName>
    <active>true</active>
    <label>Client Request Item</label>
</RecordType>