force-app/main/default/objects/ServiceItem__c/recordTypes/PickupAndDelivery.recordType-meta.xml
<RecordType>
    <fullName>PickupAndDelivery</fullName>
    <active>true</active>
    <label>Pickup and Delivery</label>
</RecordType>