force-app/main/default/objects/ServiceItem__c/listViews/Service_Items.listView-meta.xml
<ListView>
    <fullName>Service_Items</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Quantity_Requested__c</columns>
    <columns>Quantity__c</columns>
    <columns>Status__c</columns>
    <columns>Service__c</columns>
    <filterScope>Everything</filterScope>
    <label>Service Items</label>
</ListView>